*add documentation for item move *change item move to use ID instead of position for from
