# backend/server/doc/doc/swagger.json
@@ -422,7 +422,7 @@
                 }
             }
         },
-        "/lists/{listid}/items{itemid}": {
+        "/lists/{listid}/items/{itemid}": {
             "put": {
                 "tags": [
                     "Items"
@@ -515,6 +515,72 @@
                 "responses": {
                     "200": {
                         "description": "Successful operation."
+                    },
+                    "403": {
+                        "description": "Failed to authenticate token.",
+                        "schema": {
+                            "$ref": "#/definitions/Error"
+                        }
+                    },
+                    "500": {
+                        "description": "Unhandeled error.",
+                        "schema": {
+                            "$ref": "#/definitions/Error"
+                        }
+                    }
+                }
+            }
+        },
+        "/lists/{listid}/items/{itemid}/move": {
+            "put": {
+                "tags": [
+                    "Items"
+                ],
+                "summary": "Move an existing item in its list.",
+                "description": "",
+                "parameters": [
+                    {
+                        "name": "x-access-token",
+                        "in": "header",
+                        "description": "JWT for user authorization.",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "in": "path",
+                        "name": "listid",
+                        "description": "ID of list of item to be moved.",
+                        "required": true,
+                        "type": "integer",
+                        "format": "int64"
+                    },
+                    {
+                        "in": "path",
+                        "name": "itemid",
+                        "description": "ID of item to be moved.",
+                        "required": true,
+                        "type": "integer",
+                        "format": "int64"
+                    },
+                    {
+                        "in": "body",
+                        "name": "body",
+                        "description": "Target position of item to be moved.",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/MoveItem"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful operation."
+                    },
+                    "400": {
+                        "description": "Item does not exist.",
+                        "schema": {
+                            "$ref": "#/definitions/Error"
+                        }
                     },
                     "403": {
                         "description": "Failed to authenticate token.",
@@ -698,6 +764,18 @@
                     "$ref": "#/definitions/ItemValues"
                 }
             ]
+        },
+        "MoveItem": {
+            "type": "object",
+            "required": [
+                "targetposition"
+            ],
+            "properties": {
+                "targetposition": {
+                    "type": "integer",
+                    "description": "Target position of the moved item."
+                }
+            }
         },
         "Error": {
             "type": "object",
